--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+
+*{
+  box-sizing: border-box;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +13,88 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+  text-decoration: none;
+}
+
+img.small {
+  max-height: 8rem;
+  width: 100%;
+}
+
+img.logo {
+  max-height: 4rem;
+  width: 100%;
+}
+
+
+button{
+  padding: .3rem;
+  border: .1rem #da8f56 solid;
+  background-color: #e0b805;
+  width: 100%;
+  cursor: pointer;
+}
+
+button.add{
+  background-color: #40c0f0;
+  width: 1.5rem;
+}
+button.remove {
+  background-color: #9de1f9;
+  width: 1.5rem;
+}
+
+.p-1{
+  padding: 1rem;
+}
+
+button.badge{
+  background-color: red;
+  border: none;
+  color:white;
+  width: 1.5rem;
+}
+
+.card{
+  background-color: white;
+  padding: 1rem;
+  margin: .5rem;
+  
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.row.center{
+  align-items: center;
+}
+
+.col-1 {
+  flex-basis: 100%;
+}
+.col-2 {
+  flex-basis: 100%;
+}
+.text-right{
+  text-align: right;
+}
+
+@media screen and (min-width: 800px){
+  .col-1{
+    flex: 1;
+  }
+  .col-2{
+    flex: 2;
+  }
+  
+}
+
+.block{
+  background-color: #bee8f7;
+  padding: 1rem;
+  margin: 0.5rem;
 }
